--- a/debian/rules
+++ b/debian/rules
@@ -11,6 +11,10 @@ override_dh_virtualenv:
 	cp requirements.txt requirements.backup.txt
 	cat requirements.build.txt requirements.backup.txt > requirements.txt
 
+	# Remove self-referential requirement
+	# Otherwise a .egg-link file is created instead of actually installing portal module in site-packages/
+	sed -i '/-e ./d' requirements.txt
+
 	dh_virtualenv $(DH_VIRTUALENV_ARGS)
 
 override_dh_builddeb:
