Update dockerfile with new redis env var

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -25,7 +25,7 @@ ENV \
     SQLALCHEMY_DATABASE_URI="postgresql://postgres:@db/postgres" \
     CELERY_BROKER_URL="redis://redis:6379/0" \
     REQUEST_CACHE_URL="redis://redis:6379/0" \
-    SESSION_REDIS="redis:6379"
+    SESSION_REDIS_URL="redis://redis:6379/0"
 RUN mkdir -p ${LOG_FOLDER}
 RUN chown www-data:www-data ${LOG_FOLDER}
 
