Add default apache env vars

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -39,7 +39,7 @@ RUN printf '\n\
   ErrorLog /var/log/apache2/stg-error.log\n\
   CustomLog /var/log/apache2/stg-access.log combined\n\
   WSGIPassAuthorization On\n\
-  WSGIDaemonProcess stg_cs user=www-data group=www-data threads=5\n\
+  WSGIDaemonProcess stg_cs user=${APACHE_RUN_USER} group=${APACHE_RUN_GROUP} threads=5\n\
   WSGIScriptAlias / /var/www/portal.wsgi\n\
   <Directory /var/www/>\n\
     WSGIProcessGroup stg_cs\n\
