--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,12 +1,12 @@
 ---
-version: '2'
+version: '2.1'
 services:
   web:
     build:
       context: ..
       dockerfile: docker/Dockerfile
     ports:
-      - "8080:80"
+      - "${EXTERNAL_PORT:-8080}:80"
     depends_on:
       - db
       - redis
