--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
       dockerfile: docker/Dockerfile
     ports:
       - "${EXTERNAL_PORT:-8080}:80"
+    environment:
+      - APACHE_SERVER_NAME
     depends_on:
       - db
       - redis
