--- a/tox.ini
+++ b/tox.ini
@@ -23,3 +23,8 @@ passenv = SAUCE_* {[testenv]passenv}
 commands =
     {[base]commands}
     nosetests -v --cover-package=portal tests.test_integration []
+
+[testenv:build]
+# stub env for building artifacts on TravisCI
+# don't actually do anything
+platform = $^
