--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,7 @@ before_deploy:
   # Build artifacts from current repo and branch (else "develop")
   - docker run --volume debian-repo:/tmp/artifacts -e REPO_SLUG=$TRAVIS_REPO_SLUG -e BRANCH=${TRAVIS_BRANCH:-develop} "portal_builddeb:test"
   - docker cp $(docker ps --quiet --latest --filter ancestor="portal_builddeb:test"):/tmp/artifacts /tmp
-  - cp /tmp/artifacts/* ../
+  - cp --verbose /tmp/artifacts/* ../
 
   # Build bintray descriptor file dynamically
   - >
