--- a/.travis.yml
+++ b/.travis.yml
@@ -64,8 +64,11 @@ before_deploy:
   - docker volume create --name debian-repo
   # Build artifacts from current repo and branch (else "develop")
   - docker run --volume debian-repo:/tmp/artifacts -e REPO_SLUG=$TRAVIS_REPO_SLUG -e BRANCH=${TRAVIS_BRANCH:-develop} "portal_builddeb:test"
+
+  # Copy artifacts off volume mounted on previous container
   - docker cp $(docker ps --quiet --latest --filter ancestor="portal_builddeb:test"):/tmp/artifacts /tmp
   - cp --verbose /tmp/artifacts/* ../
+  # Copy artifacts to current directory to allow local installation
   - cp --recursive --verbose /tmp/artifacts artifacts
 
   # Build bintray descriptor file dynamically
