--- a/docker/docker-compose.build.yaml
+++ b/docker/docker-compose.build.yaml
@@ -6,8 +6,8 @@ services:
       context: ..
       dockerfile: docker/Dockerfile.build
     environment:
-      - BRANCH
-      - REPO_SLUG
+      - BRANCH=${BRANCH:-develop}
+      - REPO_SLUG=${REPO_SLUG:-uwcirg/true_nth_usa_portal}
     volumes:
       - debian-repo:/tmp/artifacts
 volumes:
