--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -10,8 +10,8 @@ services:
     ports:
       - "${EXTERNAL_PORT:-8080}:80"
     environment:
-      - APACHE_SERVER_NAME
-      - PERSISTENCE_FILE
+      - APACHE_SERVER_NAME=${APACHE_SERVER_NAME:-localhost}
+      - PERSISTENCE_FILE=${PERSISTENCE_FILE:-https://raw.githubusercontent.com/uwcirg/TrueNTH-USA-site-config/develop/site_persistence_file.json}
     depends_on:
       - db
       - redis
