Build portal image on TravisCI

--- a/.travis.yml
+++ b/.travis.yml
@@ -71,6 +71,8 @@ before_deploy:
   # Copy artifacts to current directory to allow local installation
   - cp --recursive --verbose /tmp/artifacts artifacts
 
+  - docker build --file docker/Dockerfile  --tag "portal_deb:test" .
+
   # Build bintray descriptor file dynamically
   - >
     printf '
