--- a/.travis.yml
+++ b/.travis.yml
@@ -62,8 +62,10 @@ script:
   - tox
 
 before_deploy:
-  - docker build --file docker/Dockerfile.build --tag "portal_builddeb:test" .
+  - docker login --username "$GH_USERNAME" --password "$BINTRAY_API_KEY" "$GH_USERNAME-docker-portal.bintray.io"
+  - if [[ -v DOCKER_CLOUD_API_KEY ]]; then docker login --username "$DOCKER_CLOUD_USERNAME" --password "$DOCKER_CLOUD_API_KEY" docker.io/$DOCKER_CLOUD_USERNAME/docker_web;fi
 
+  - docker build --file docker/Dockerfile.build --tag "portal_builddeb:test" .
   - docker volume create --name debian-repo
   # Build artifacts from current repo and branch (else "develop")
   - docker run --volume debian-repo:/tmp/artifacts -e REPO_SLUG=$TRAVIS_REPO_SLUG -e BRANCH=${TRAVIS_BRANCH:-develop} "portal_builddeb:test"
