--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -2,7 +2,7 @@
 version: '2.1'
 services:
   web:
-    image: "${GH_USERNAME:-uwcirg}-docker-portal.bintray.io/docker_web:latest"
+    image: "${GH_USERNAME:-uwcirg}-docker-portal.bintray.io/portal_web:latest"
     build:
       context: ..
       dockerfile: docker/Dockerfile
