--- a/.travis.yml
+++ b/.travis.yml
@@ -63,7 +63,7 @@ script:
 
 before_deploy:
   - docker login --username "$GH_USERNAME" --password "$BINTRAY_API_KEY" "$GH_USERNAME-docker-portal.bintray.io"
-  - if [[ -v DOCKER_CLOUD_API_KEY ]]; then docker login --username "$DOCKER_CLOUD_USERNAME" --password "$DOCKER_CLOUD_API_KEY" docker.io/$DOCKER_CLOUD_USERNAME/docker_web;fi
+  - if [[ -v DOCKER_CLOUD_API_KEY ]]; then docker login --username "$DOCKER_CLOUD_USERNAME" --password "$DOCKER_CLOUD_API_KEY" docker.io/$DOCKER_CLOUD_USERNAME/portal_web;fi
 
   - docker build --file docker/Dockerfile.build --tag "portal_builddeb:test" .
   - docker volume create --name debian-repo
@@ -122,8 +122,8 @@ deploy:
   key: $BINTRAY_API_KEY
 
 after_deploy:
-  - docker tag docker_web:latest "$GH_USERNAME-docker-portal.bintray.io/docker_web:latest" # tag
+  - docker tag portal_web:latest "$GH_USERNAME-docker-portal.bintray.io/portal_web:latest"
   - docker push "$GH_USERNAME-docker-portal.bintray.io" #(registry)
 
-  - docker tag docker_web:latest "$DOCKER_CLOUD_USERNAME/docker_web:latest"
-  - if [[ -v DOCKER_CLOUD_API_KEY ]]; then docker push "docker.io/$DOCKER_CLOUD_USERNAME/docker_web";fi
+  - docker tag portal_web:latest "$DOCKER_CLOUD_USERNAME/portal_web:latest"
+  - if [[ -v DOCKER_CLOUD_API_KEY ]]; then docker push "docker.io/$DOCKER_CLOUD_USERNAME/portal_web";fi
