--- a/.travis.yml
+++ b/.travis.yml
@@ -63,7 +63,7 @@ script:
 
 before_deploy:
   - docker login --username "$GH_USERNAME" --password "$BINTRAY_API_KEY" "$GH_USERNAME-docker-portal.bintray.io"
-  - if [[ -v DOCKER_CLOUD_API_KEY ]]; then docker login --username "$DOCKER_CLOUD_USERNAME" --password "$DOCKER_CLOUD_API_KEY" docker.io/$DOCKER_CLOUD_USERNAME/portal_web;fi
+  - if [[ -v DOCKER_CLOUD_API_KEY ]]; then docker login --username "$DOCKER_CLOUD_USERNAME" --password "$DOCKER_CLOUD_API_KEY" docker.io/$DOCKER_CLOUD_USERNAME;fi
 
   - docker build --file docker/Dockerfile.build --tag "portal_builddeb:test" .
   - docker volume create --name debian-repo
