--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ before_install:
   - if [[ ! -v TOXENV ]]; then export TOXENV=py27;fi
 
   # Set Docker username from github username (if not already set by repo env vars)
-  - if [[ ! -v DOCKER_CLOUD_USERNAME ]]; then export DOCKER_CLOUD_USERNAME="${GH_USERNAME//-}";fi
+  - export DOCKER_CLOUD_USERNAME=${DOCKER_CLOUD_USERNAME:-${GH_USERNAME//-}}
 
   # Fetch all remote branches instead of just the currently checked out one
   - git config remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*"
