--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ env:
     - SQLALCHEMY_DATABASE_URI='postgresql://postgres:@localhost/portal_unit_tests'
     - LOG_FOLDER='/tmp/shared_service_log'
     - PERSISTENCE_FILE='https://raw.githubusercontent.com/uwcirg/TrueNTH-USA-site-config/develop/site_persistence_file.json'
+    - DOCKER_CLOUD_USERNAME=${DOCKER_CLOUD_USERNAME:-${GH_USERNAME//-}}
 
 matrix:
   include:
@@ -42,9 +43,6 @@ before_install:
 
   # Set TOXENV default (if not already set by matrix environmental variables)
   - if [[ ! -v TOXENV ]]; then export TOXENV=py27;fi
-
-  # Set Docker username from github username (if not already set by repo env vars)
-  - export DOCKER_CLOUD_USERNAME=${DOCKER_CLOUD_USERNAME:-${GH_USERNAME//-}}
 
   # Fetch all remote branches instead of just the currently checked out one
   - git config remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*"
