--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,10 @@ env:
     - LOG_FOLDER='/tmp/shared_service_log'
     - PERSISTENCE_FILE='https://raw.githubusercontent.com/uwcirg/TrueNTH-USA-site-config/develop/site_persistence_file.json'
     - DOCKER_CLOUD_USERNAME=${DOCKER_CLOUD_USERNAME:-${GH_USERNAME//-}}
+    - PACKAGE_NAME=${PACKAGE_NAME:-true_nth_usa_portal}
+    - IMAGE_NAME=${IMAGE_NAME:-portal_web}
+    - BINTRAY_DEB_REPO=${BINTRAY_DEB_REPO:-true_nth}
+    - BINTRAY_DOCKER_REPO=${BINTRAY_DOCKER_REPO:-portal}
 
 matrix:
   include:
@@ -61,7 +65,7 @@ script:
   - tox
 
 before_deploy:
-  - docker login --username "$GH_USERNAME" --password "$BINTRAY_API_KEY" "$GH_USERNAME-docker-portal.bintray.io"
+  - docker login --username "$GH_USERNAME" --password "$BINTRAY_API_KEY" "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io"
   - if [[ -v DOCKER_CLOUD_API_KEY ]]; then docker login --username "$DOCKER_CLOUD_USERNAME" --password "$DOCKER_CLOUD_API_KEY" https://index.docker.io/v1/;fi
 
   - docker build --file docker/Dockerfile.build --tag "portal_builddeb:test" .
@@ -75,15 +79,15 @@ before_deploy:
   # Copy artifacts to current directory to allow local installation
   - cp --recursive --verbose /tmp/artifacts artifacts
 
-  - docker build --file docker/Dockerfile  --tag "portal_deb:test" --tag "portal_web:latest" .
+  - docker build --file docker/Dockerfile  --tag "portal_deb:test" --tag "$IMAGE_NAME:latest" .
 
   # Build bintray descriptor file dynamically
   - >
     printf '
     {
         "package": {
-            "name": "true_nth_usa_portal",
-            "repo": "true_nth",
+            "name": "$PACKAGE_NAME",
+            "repo": "$BINTRAY_DEB_REPO",
             "subject": "$GH_USERNAME",
             "public_download_numbers": false,
             "public_stats": false
@@ -121,8 +125,8 @@ deploy:
   key: $BINTRAY_API_KEY
 
 after_deploy:
-  - docker tag portal_web:latest "$GH_USERNAME-docker-portal.bintray.io/portal_web:latest"
-  - docker push "$GH_USERNAME-docker-portal.bintray.io/portal_web:latest"
+  - docker tag $IMAGE_NAME:latest "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io/$IMAGE_NAME:latest"
+  - docker push "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io/$IMAGE_NAME:latest"
 
-  - docker tag portal_web:latest "$DOCKER_CLOUD_USERNAME/portal_web:latest"
-  - if [[ -v DOCKER_CLOUD_API_KEY ]]; then docker push "docker.io/$DOCKER_CLOUD_USERNAME/portal_web";fi
+  - docker tag $IMAGE_NAME:latest "$DOCKER_CLOUD_USERNAME/$IMAGE_NAME:latest"
+  - if [[ -v DOCKER_CLOUD_API_KEY ]]; then docker push "docker.io/$DOCKER_CLOUD_USERNAME/$IMAGE_NAME";fi
