--- a/docker/docker-compose.build.yaml
+++ b/docker/docker-compose.build.yaml
@@ -1,3 +1,4 @@
+# To copy artifacts out of this image follow below example
 # sudo cp -R $(docker volume inspect --format '{{ .Mountpoint }}' docker_debian-repo) artifacts
 ---
 version: '2.1'
