--- a/.travis.yml
+++ b/.travis.yml
@@ -64,10 +64,9 @@ install:
 script:
   - tox
 
-before_deploy:
-  - export DOCKER_CLOUD_USERNAME=${DOCKER_CLOUD_USERNAME:-${GH_USERNAME//-}}
-  - docker login --username "$GH_USERNAME" --password "$BINTRAY_API_KEY" "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io"
-  - if [[ -v DOCKER_CLOUD_API_KEY ]]; then docker login --username "$DOCKER_CLOUD_USERNAME" --password "$DOCKER_CLOUD_API_KEY" https://index.docker.io/v1/;fi
+after_success:
+  # Only run build steps in corresponding tox env
+  - if [[ "$TOXENV" != "build" ]]; then travis_terminate 0;fi
 
   - docker build --file docker/Dockerfile.build --tag "portal_builddeb:test" .
   - docker volume create --name debian-repo
@@ -78,8 +77,12 @@ before_deploy:
   - docker cp $(docker ps --quiet --latest --filter ancestor="portal_builddeb:test"):/tmp/artifacts /tmp
   # Copy artifacts to current directory to allow local installation
   - cp --recursive --verbose /tmp/artifacts artifacts
-
   - docker build --file docker/Dockerfile  --tag "portal_deb:test" --tag "$IMAGE_NAME:latest" .
+
+before_deploy:
+  - export DOCKER_CLOUD_USERNAME=${DOCKER_CLOUD_USERNAME:-${GH_USERNAME//-}}
+  - docker login --username "$GH_USERNAME" --password "$BINTRAY_API_KEY" "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io"
+  - if [[ -v DOCKER_CLOUD_API_KEY ]]; then docker login --username "$DOCKER_CLOUD_USERNAME" --password "$DOCKER_CLOUD_API_KEY" https://index.docker.io/v1/;fi
 
   # Build bintray descriptor file dynamically
   - >
