--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ before_install:
   # Set Github env vars
   - IFS=/ read GH_USERNAME GH_REPO <<< "$TRAVIS_REPO_SLUG"
   - export GH_USERNAME GH_REPO
+  - export SHORT_HASH=${TRAVIS_COMMIT::8}
 
   # Only deploy from develop and master branches, and not previously configured
   - if [[ ! -v DEPLOY && ("$TRAVIS_BRANCH" = "master" || "$TRAVIS_BRANCH" = "develop") ]]; then export DEPLOY=true;fi
@@ -68,6 +69,9 @@ after_success:
   # Only run build steps in corresponding tox env
   - if [[ "$TOXENV" != "build" ]]; then travis_terminate 0;fi
 
+  # Set docker tag based on branch
+  - declare -A TAGS=(["develop"]="latest" ["master"]="stable"); export TAG=${TAGS["${TRAVIS_BRANCH}"]:-${TRAVIS_BRANCH}}
+
   - docker build --file docker/Dockerfile.build --tag "portal_builddeb:test" .
   - docker volume create --name debian-repo
   # Build artifacts from current repo and branch (else "develop")
@@ -77,7 +81,7 @@ after_success:
   - docker cp $(docker ps --quiet --latest --filter ancestor="portal_builddeb:test"):/tmp/artifacts /tmp
   # Copy artifacts to current directory to allow local installation
   - cp --recursive --verbose /tmp/artifacts artifacts
-  - docker build --file docker/Dockerfile  --tag "$IMAGE_NAME:latest" .
+  - docker build --file docker/Dockerfile  --tag "$IMAGE_NAME:$SHORT_HASH" --tag "$IMAGE_NAME:$TAG" --tag "$IMAGE_NAME:$TRAVIS_BUILD_NUMBER" .
 
 before_deploy:
   - export DOCKER_CLOUD_USERNAME=${DOCKER_CLOUD_USERNAME:-${GH_USERNAME//-}}
