--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,7 @@ after_success:
   # Set docker tag based on branch
   - declare -A TAGS=(["develop"]="latest" ["master"]="stable"); export TAG=${TAGS["${TRAVIS_BRANCH}"]:-${TRAVIS_BRANCH}}
 
-  - docker build --file docker/Dockerfile.build --tag "deb_builder:test" .
+  - docker pull "uwcirg-docker-$BINTRAY_DOCKER_REPO.bintray.io/deb_builder:latest"
   - docker volume create --name debian-repo
   # Build artifacts from current repo and branch (else "develop")
   - docker run --volume debian-repo:/tmp/artifacts -e REPO_SLUG=$TRAVIS_REPO_SLUG -e BRANCH=${TRAVIS_BRANCH:-develop} "deb_builder:test"
