--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ env:
     - IMAGE_NAME=${IMAGE_NAME:-portal_web}
     - BINTRAY_DEB_REPO=${BINTRAY_DEB_REPO:-true_nth}
     - BINTRAY_DOCKER_REPO=${BINTRAY_DOCKER_REPO:-portal}
-    - BINTRAY_DOCKER_USERNAME=${BINTRAY_DOCKER_USERNAME:-uwcirg}
+    - BINTRAY_USERNAME=${BINTRAY_USERNAME:-uwcirg}
 
 matrix:
   include:
@@ -86,7 +86,7 @@ after_success:
 
 before_deploy:
   - export DOCKER_CLOUD_USERNAME=${DOCKER_CLOUD_USERNAME:-${GH_USERNAME//-}}
-  - docker login --username "$BINTRAY_DOCKER_USERNAME" --password "$BINTRAY_API_KEY" "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io"
+  - docker login --username "$BINTRAY_USERNAME" --password "$BINTRAY_API_KEY" "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io"
   - if [[ -v DOCKER_CLOUD_API_KEY ]]; then docker login --username "$DOCKER_CLOUD_USERNAME" --password "$DOCKER_CLOUD_API_KEY" https://index.docker.io/v1/;fi
 
   # Build bintray descriptor file dynamically
