--- a/.travis.yml
+++ b/.travis.yml
@@ -79,7 +79,7 @@ after_success:
   - docker run --volume debian-repo:/tmp/artifacts -e REPO_SLUG=$TRAVIS_REPO_SLUG -e BRANCH=${TRAVIS_BRANCH:-develop} "uwcirg-docker-$BINTRAY_DOCKER_REPO.bintray.io/deb_builder:latest"
 
   # Copy artifacts off volume mounted on previous container
-  - docker cp $(docker ps --quiet --latest --filter ancestor="deb_builder:test"):/tmp/artifacts /tmp
+  - docker cp $(docker ps --quiet --latest --filter ancestor="uwcirg-docker-$BINTRAY_DOCKER_REPO.bintray.io/deb_builder:latest"):/tmp/artifacts /tmp
   # Copy artifacts to current directory to allow local installation
   - cp --recursive --verbose /tmp/artifacts artifacts
   - docker build --file docker/Dockerfile  --tag "$IMAGE_NAME:$SHORT_HASH" --tag "$IMAGE_NAME:$TAG" --tag "$IMAGE_NAME:$TRAVIS_BUILD_NUMBER" .
