--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+# Do not install binary wheels for certain packages
+# See https://github.com/spotify/dh-virtualenv/issues/150
+--no-binary billiard,cffi
+
 alabaster==0.7.9
 alembic==0.8.10
 amqp==2.1.4
