--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -18,7 +18,6 @@ RUN \
 RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 379CE192D401AB61
 
 RUN \
-    apt-get clean && \
     apt-get update && \
     apt-get dist-upgrade -y && \
     apt-get install -y --force-yes \
@@ -27,7 +26,8 @@ RUN \
         libpq5 \
         locales \
         portal \
-        python2.7
+        python2.7 && \
+    apt-get clean
 
 RUN dpkg-reconfigure locales && \
     locale-gen C.UTF-8 && \
