Disable unnecessary services and addons for docgen testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ env:
 matrix:
   include:
     - env: TOXENV=docs
+      services: []
+      addons: {}
     - env: TOXENV=ui
       addons:
         postgresql: "9.4"
