--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,9 @@ before_install:
   - export SHORT_HASH=${TRAVIS_COMMIT::8}
 
   # Only deploy from develop and master branches, and not previously configured
-  - if [[ ! -v DEPLOY && ("$TRAVIS_BRANCH" = "master" || "$TRAVIS_BRANCH" = "develop") ]]; then export DEPLOY=true;fi
+  - if [[ ! -v DEPLOY && ("$TRAVIS_BRANCH" = "master" || "$TRAVIS_BRANCH" = "develop") ]]; then
+      export DEPLOY=true
+    ;fi
 
   # Set TOXENV default (if not already set by matrix environmental variables)
   - if [[ ! -v TOXENV ]]; then export TOXENV=py27;fi
@@ -76,18 +78,35 @@ after_success:
   - docker pull "uwcirg-docker-true_nth.bintray.io/deb_builder:latest"
   - docker volume create --name debian-repo
   # Build artifacts from current repo and branch (else "develop")
-  - docker run --volume debian-repo:/tmp/artifacts --env REPO_SLUG=$TRAVIS_REPO_SLUG --env BRANCH=${TRAVIS_BRANCH:-develop} "uwcirg-docker-true_nth.bintray.io/deb_builder:latest"
+  - docker run
+      --volume debian-repo:/tmp/artifacts
+      --env REPO_SLUG=$TRAVIS_REPO_SLUG
+      --env BRANCH=${TRAVIS_BRANCH:-develop}
+    "uwcirg-docker-true_nth.bintray.io/deb_builder:latest"
 
   # Copy artifacts off volume mounted on previous container
   - docker cp $(docker ps --quiet --latest --filter ancestor="uwcirg-docker-true_nth.bintray.io/deb_builder:latest"):/tmp/artifacts /tmp
   # Copy artifacts to current directory to allow local installation
   - cp --recursive --verbose /tmp/artifacts artifacts
-  - docker build --file docker/Dockerfile --tag "$IMAGE_NAME:$SHORT_HASH" --tag "$IMAGE_NAME:$TAG" --tag "$IMAGE_NAME:$TRAVIS_BUILD_NUMBER" .
+  - docker build
+      --file docker/Dockerfile
+      --tag "$IMAGE_NAME:$SHORT_HASH"
+      --tag "$IMAGE_NAME:$TAG"
+      --tag "$IMAGE_NAME:$TRAVIS_BUILD_NUMBER"
+    .
 
 before_deploy:
   - export DOCKER_CLOUD_USERNAME=${DOCKER_CLOUD_USERNAME:-${GH_USERNAME//-}}
-  - docker login --username "$BINTRAY_USERNAME" --password "$BINTRAY_API_KEY" "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io"
-  - if [[ -v DOCKER_CLOUD_API_KEY ]]; then docker login --username "$DOCKER_CLOUD_USERNAME" --password "$DOCKER_CLOUD_API_KEY" https://index.docker.io/v1/;fi
+  - docker login
+      --username "$BINTRAY_USERNAME"
+      --password "$BINTRAY_API_KEY"
+    "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io"
+  - if [[ -v DOCKER_CLOUD_API_KEY ]]; then
+      docker login
+        --username "$DOCKER_CLOUD_USERNAME"
+        --password "$DOCKER_CLOUD_API_KEY"
+      https://index.docker.io/v1/
+    ;fi
 
   # Build bintray descriptor file dynamically
   - >
@@ -133,8 +152,14 @@ deploy:
   key: $BINTRAY_API_KEY
 
 after_deploy:
-  - docker tag "$IMAGE_NAME:$TAG" "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io/$IMAGE_NAME:$TAG"
+  - docker tag
+    "$IMAGE_NAME:$TAG"
+    "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io/$IMAGE_NAME:$TAG"
   - docker push "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io/$IMAGE_NAME:$TAG"
 
-  - docker tag "$IMAGE_NAME:$TAG" "$DOCKER_CLOUD_USERNAME/$IMAGE_NAME:$TAG"
-  - if [[ -v DOCKER_CLOUD_API_KEY ]]; then docker push "docker.io/$DOCKER_CLOUD_USERNAME/$IMAGE_NAME";fi
+  - docker tag
+    "$IMAGE_NAME:$TAG"
+    "$DOCKER_CLOUD_USERNAME/$IMAGE_NAME:$TAG"
+  - if [[ -v DOCKER_CLOUD_API_KEY ]]; then
+      docker push "docker.io/$DOCKER_CLOUD_USERNAME/$IMAGE_NAME"
+    ;fi
