--- a/.travis.yml
+++ b/.travis.yml
@@ -74,6 +74,7 @@ after_success:
 
   # Set docker tag based on branch
   - declare -A TAGS=(["develop"]="latest" ["master"]="stable"); export TAG=${TAGS["${TRAVIS_BRANCH}"]:-${TRAVIS_BRANCH//\//_}}
+  - export TAG=${TRAVIS_TAG:-${TAG}}
 
   - docker pull "uwcirg-docker-true_nth.bintray.io/deb_builder:latest"
   - docker volume create --name debian-repo
