--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
       args:
         - debian_repo="${DEBIAN_REPO:-http://dl.bintray.com/v1/content/uwcirg/${BINTRAY_DEB_REPO:-true_nth}}"
     ports:
-      - "${EXTERNAL_PORT:-8080}:80"
+      - "${EXTERNAL_PORT:-8080}:${PORT:-8008}"
     environment:
       - APACHE_SERVER_NAME=${APACHE_SERVER_NAME:-localhost}
       - PERSISTENCE_FILE=${PERSISTENCE_FILE:-https://raw.githubusercontent.com/uwcirg/TrueNTH-USA-site-config/develop/site_persistence_file.json}
