--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -53,6 +53,7 @@ RUN \
 COPY portal.wsgi /var/www/
 
 ENV \
+    APACHE_RUN_USER="${APACHE_RUN_USER:-www-data}" \
     LOG_FOLDER="/tmp/shared_service_log" \
     PORT="${PORT:-8008}" \
     PROJECT_DIR="/opt/venvs/portal"
@@ -62,6 +63,8 @@ RUN \
     chown $APACHE_RUN_USER:$APACHE_RUN_USER ${LOG_FOLDER} ${PROJECT_DIR}/var/portal-instance/ && \
     sed -i 's|Listen [[:digit:]]\+|Listen ${PORT}|g' /etc/apache2/ports.conf && \
     a2ensite portal && a2dissite 000-default
+
+USER ${APACHE_RUN_USER}
 
 ENV \
     APACHE_SERVER_NAME=${APACHE_SERVER_NAME:-localhost} \
