--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -61,7 +61,10 @@ ENV \
 
 RUN \
     mkdir -p ${LOG_FOLDER} ${PROJECT_DIR}/var/portal-instance/ && \
-    chown $APACHE_RUN_USER:$APACHE_RUN_USER ${LOG_FOLDER} ${PROJECT_DIR}/var/portal-instance/ && \
+    chown $APACHE_RUN_USER:$APACHE_RUN_USER \
+        /var/run/apache2/ \
+        ${LOG_FOLDER} \
+        ${PROJECT_DIR}/var/portal-instance/ && \
     sed -i 's|Listen [[:digit:]]\+|Listen ${PORT}|g' /etc/apache2/ports.conf && \
     a2ensite portal && a2dissite 000-default && a2disconf other-vhosts-access-log
 
