--- a/.travis.yml
+++ b/.travis.yml
@@ -46,8 +46,8 @@ before_install:
 
   # Only deploy from develop and master branches, and not previously configured
   - if [[ ! -v DEPLOY && ("$TRAVIS_BRANCH" = "master" || "$TRAVIS_BRANCH" = "develop") ]]; then
-      export DEPLOY=true
-    ;fi
+      export DEPLOY=true;
+    fi
 
   # Set TOXENV default (if not already set by matrix environmental variables)
   - if [[ ! -v TOXENV ]]; then export TOXENV=py27;fi
@@ -101,20 +101,20 @@ before_deploy:
   - docker login
       --username "$BINTRAY_USERNAME"
       --password "$BINTRAY_API_KEY"
-    "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io"
+    "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io" &
   - if [[ -v DOCKER_CLOUD_API_KEY ]]; then
       docker login
         --username "$DOCKER_CLOUD_USERNAME"
         --password "$DOCKER_CLOUD_API_KEY"
-      https://index.docker.io/v1/
-    ;fi
+      https://index.docker.io/v1/ &
+    fi
 
   - if [[ -v HEROKU_API_KEY ]]; then
       docker login
         --username "$HEROKU_USERNAME"
         --password "$HEROKU_API_KEY"
-      https://registry.heroku.com/
-    ;fi
+      https://registry.heroku.com/ &
+    fi
 
   # Build bintray descriptor file dynamically
   - >
@@ -164,18 +164,21 @@ after_deploy:
   - docker tag
     "$IMAGE_NAME:$TAG"
     "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io/$IMAGE_NAME:$TAG"
-  - docker push "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io/$IMAGE_NAME:$TAG"
+  - docker push "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io/$IMAGE_NAME:$TAG" &
 
   # Deploy to Docker Hub, if configured
   - docker tag
     "$IMAGE_NAME:$TAG"
     "$DOCKER_CLOUD_USERNAME/$IMAGE_NAME:$TAG"
   - if [[ -v DOCKER_CLOUD_API_KEY ]]; then
-      docker push "docker.io/$DOCKER_CLOUD_USERNAME/$IMAGE_NAME"
-    ;fi
+      docker push "docker.io/$DOCKER_CLOUD_USERNAME/$IMAGE_NAME" &
+    fi
 
   # Deploy to Heroku, if configured
   - if [[ -v HEROKU_API_KEY ]]; then
       docker tag "$IMAGE_NAME:$TAG" "registry.heroku.com/$HEROKU_APP/web";
-      docker push "registry.heroku.com/$HEROKU_APP/web";
+      docker push "registry.heroku.com/$HEROKU_APP/web" &
     fi
+
+  # Wait for jobs sent to background to finish if they haven't already completed
+  - wait
