--- a/.travis.yml
+++ b/.travis.yml
@@ -101,19 +101,19 @@ before_deploy:
   - docker login
       --username "$BINTRAY_USERNAME"
       --password "$BINTRAY_API_KEY"
-    "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io" &
+    "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io"
   - if [[ -v DOCKER_CLOUD_API_KEY ]]; then
       docker login
         --username "$DOCKER_CLOUD_USERNAME"
         --password "$DOCKER_CLOUD_API_KEY"
-      https://index.docker.io/v1/ &
+      https://index.docker.io/v1/ ;
     fi
 
   - if [[ -v HEROKU_API_KEY ]]; then
       docker login
         --username "$HEROKU_USERNAME"
         --password "$HEROKU_API_KEY"
-      https://registry.heroku.com/ &
+      https://registry.heroku.com/ ;
     fi
 
   # Build bintray descriptor file dynamically
