--- a/.travis.yml
+++ b/.travis.yml
@@ -73,8 +73,15 @@ after_success:
   - if [[ "$TOXENV" != "build" ]]; then travis_terminate 0;fi
 
   # Set docker tag based on branch
-  - declare -A TAGS=(["develop"]="latest" ["master"]="stable"); export TAG=${TAGS["${TRAVIS_BRANCH}"]:-${TRAVIS_BRANCH//\//_}}
+  - declare -A TAGS=(["develop"]="latest" ["master"]="stable");
+    export TAG=${TAGS["${TRAVIS_BRANCH}"]:-${TRAVIS_BRANCH//\//_}}
   - export TAG=${TRAVIS_TAG:-${TAG}}
+  - export DOCKER_TAGS=(
+      "$TAG"
+      "$SHORT_HASH"
+      "$TRAVIS_COMMIT"
+      "$TRAVIS_BUILD_NUMBER"
+    )
 
   - docker pull "uwcirg-docker-true_nth.bintray.io/deb_builder:latest"
   - docker volume create --name debian-repo
@@ -91,9 +98,7 @@ after_success:
   - cp --recursive --verbose /tmp/artifacts artifacts
   - docker build
       --file docker/Dockerfile
-      --tag "$IMAGE_NAME:$SHORT_HASH"
       --tag "$IMAGE_NAME:$TAG"
-      --tag "$IMAGE_NAME:$TRAVIS_BUILD_NUMBER"
     .
 
 before_deploy:
@@ -160,25 +165,33 @@ deploy:
     key: $BINTRAY_API_KEY
 
 after_deploy:
-  # Deploy images to Bintray
-  - docker tag
-    "$IMAGE_NAME:$TAG"
-    "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io/$IMAGE_NAME:$TAG"
-  - docker push "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io/$IMAGE_NAME:$TAG" &
+  # Apply all tags
+  - for tag in "${DOCKER_TAGS[@]}" do
+      docker tag
+        "$IMAGE_NAME:$TAG"
+        "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io/$IMAGE_NAME:$tag"
+    done
+  # Deploy image (and all tags) to Bintray
+  - for tag in "${DOCKER_TAGS[@]}" do
+      docker push "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io/$IMAGE_NAME:$tag"
+    done
 
   # Deploy to Docker Hub, if configured
-  - docker tag
-    "$IMAGE_NAME:$TAG"
-    "$DOCKER_CLOUD_USERNAME/$IMAGE_NAME:$TAG"
   - if [[ -v DOCKER_CLOUD_API_KEY ]]; then
-      docker push "docker.io/$DOCKER_CLOUD_USERNAME/$IMAGE_NAME" &
+      for tag in "${DOCKER_TAGS[@]}" do
+        docker tag
+          "$IMAGE_NAME:$TAG"
+          "$DOCKER_CLOUD_USERNAME/$IMAGE_NAME:$tag"
+      done
+    fi
+  - if [[ -v DOCKER_CLOUD_API_KEY ]]; then
+      for tag in "${DOCKER_TAGS[@]}" do
+        docker push "$DOCKER_CLOUD_USERNAME/$IMAGE_NAME:$tag"
+      done
     fi
 
   # Deploy to Heroku, if configured
   - if [[ -v HEROKU_API_KEY ]]; then
       docker tag "$IMAGE_NAME:$TAG" "registry.heroku.com/$HEROKU_APP/web";
-      docker push "registry.heroku.com/$HEROKU_APP/web" &
+      docker push "registry.heroku.com/$HEROKU_APP/web"
     fi
-
-  # Wait for jobs sent to background to finish if they haven't already completed
-  - wait
